--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 100%;
   height: auto;
 }
 .header {
@@ -80,6 +80,8 @@ body {
   align-items: center;
   width: 100%;
   height: auto;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 .header-left {
   display: flex;
@@ -172,4 +174,110 @@ body {
   font-size: 1rem;
   font-weight: 400;
   color: var(--white);
+}
+.top-container {
+  background-color: var(--cardbg);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.5rem;
+}
+.form-image-sm {
+  width: 50%;
+}
+.form-image-lg {
+  display: none;
+}
+.form-container {
+  background-color: var(--inputText);
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+.input-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: var(--white);
+  margin: 1rem;
+  margin-left: 0px;
+  /* padding: 0.3rem; */
+  border-radius: 0.3rem;
+}
+.input-icon {
+  width: 2.2rem;
+}
+.input {
+  width: auto;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  padding: 0.3rem;
+}
+.form-heading {
+  font-size: 1.3rem;
+  font-weight: 500;
+  font-family: 'Roboto';
+  color: var(--white);
+}
+.icon-container {
+  border: none;
+  border-right: 2px solid var(--inputText);
+  padding: 0.1rem;
+}
+.input::placeholder {
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: var(--inputText);
+  font-family: 'Roboto';
+}
+.btn {
+  width: 70px;
+  height: 30px;
+  color: white;
+  background-color: var(--buttonbg);
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 1rem;
+  outline: none;
+  float: right;
+  border: none;
+  border-radius: 3px;
+}
+.no-passwords-container {
+  width: 80%;
+}
+.passwords-cards-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+@media screen and (min-width: 567px) {
+  .top-container {
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .bottom-container {
+    width: 80%;
+  }
+  .form-container {
+    width: 40%;
+  }
+  .form-image-lg {
+    display: block;
+    order: 2;
+    width: 40%;
+  }
+  .form-image-sm {
+    display: none;
+  }
+  .passwords-cards-container {
+    display: flex;
+    flex-direction: row;
+  }
 }
